forth/test/fail/test_switch_arity_case_mismatch.af
\ Requires `lang.af`.

fun: test_switch_arity_case_mismatch_fail { val -- out }
  val switch
    10 case 100 end
    20 case 200 201 end
    300
  end
end
